[tool.poetry]
name = "glide-api"
version = "0.1.0"
description = ""
authors = ["inspirit941 <inspirit941@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
uvicorn = "^0.29.0"
fastapi = "^0.110.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
